--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             background: var(--background);
             font-family: 'Arial Rounded MT Bold', Arial, sans-serif;
             color: #fff;
-            overflow-x: hidden;
+            overflow: hidden;
             touch-action: manipulation;
         }
 
@@ -27,23 +27,26 @@
             backdrop-filter: blur(5px);
             border-bottom: 2px solid var(--primary);
             text-align: center;
+            transition: opacity 0.3s;
         }
 
         canvas {
             display: block;
             background: linear-gradient(45deg, #1a1a1a 0%, #2d2d2d 100%);
-            margin: 1rem auto;
-            border-radius: 15px;
-            box-shadow: 0 0 20px rgba(0,0,0,0.5);
-            max-width: 100%;
+            margin: 0 auto;
+            border-radius: 0;
+            box-shadow: none;
         }
 
         #controls {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1000;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             gap: 1rem;
-            margin: 1rem auto;
-            padding: 0 1rem;
         }
 
         .game-btn {
@@ -65,10 +68,13 @@
         }
 
         #mobileControls {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
             display: none;
-            justify-content: center;
             gap: 2rem;
-            margin: 1rem auto;
+            z-index: 1000;
         }
 
         .mobile-btn {
@@ -80,23 +86,11 @@
             color: white;
             font-size: 1.5rem;
             touch-action: manipulation;
+            transition: transform 0.1s;
         }
 
-        @media (max-width: 768px) {
-            canvas {
-                width: 95%;
-                height: auto;
-                aspect-ratio: 16/9;
-            }
-
-            #mobileControls {
-                display: flex;
-            }
-
-            .game-btn {
-                padding: 0.8rem 1.5rem;
-                font-size: 1rem;
-            }
+        .mobile-btn:active {
+            transform: scale(0.9);
         }
 
         .game-over {
@@ -111,7 +105,14 @@
             backdrop-filter: blur(10px);
             border: 2px solid var(--primary);
             box-shadow: 0 0 30px rgba(255,167,38,0.2);
-            z-index: 1000;
+            z-index: 1001;
+        }
+
+        .particle {
+            position: absolute;
+            pointer-events: none;
+            background: var(--primary);
+            border-radius: 50%;
         }
     </style>
 </head>
@@ -123,28 +124,44 @@
 
     <div id="controls">
         <button class="game-btn" id="startBtn">Start Game</button>
-        <button class="game-btn" id="restartBtn" disabled>Restart</button>
     </div>
 
     <canvas id="gameCanvas"></canvas>
 
     <div id="mobileControls">
         <button class="mobile-btn" id="jumpBtn">↑</button>
-        <button class="mobile-btn" id="restartMobileBtn">↻</button>
     </div>
 
     <script>
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
         let animationFrameId;
+        let particles = [];
+        let screenShake = 0;
+
+        // Fullscreen setup
+        function enterFullscreen() {
+            if (canvas.requestFullscreen) {
+                canvas.requestFullscreen();
+            } else if (canvas.webkitRequestFullscreen) {
+                canvas.webkitRequestFullscreen();
+            }
+            document.getElementById('controls').style.opacity = '0';
+        }
 
         // Responsive setup
         function resizeCanvas() {
-            canvas.width = Math.min(window.innerWidth - 40, 800);
-            canvas.height = canvas.width * 0.5;
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
         }
         resizeCanvas();
         window.addEventListener('resize', resizeCanvas);
+        window.addEventListener('fullscreenchange', () => {
+            if (!document.fullscreenElement) {
+                resetGame();
+                document.getElementById('controls').style.opacity = '1';
+            }
+        });
 
         // Game constants
         const GRAVITY = 0.7;
@@ -157,12 +174,13 @@
         let gameSpeed = INITIAL_SPEED;
         let player = {
             x: 50,
-            y: canvas.height - GROUND_HEIGHT - 60,
+            y: 0,
             width: 40,
             height: 60,
             yVelocity: 0,
             isJumping: false,
-            color: '#FFA726'
+            color: '#FFA726',
+            scaleY: 1
         };
 
         let obstacles = [];
@@ -179,6 +197,7 @@
                 this.x = canvas.width;
                 this.y = canvas.height - GROUND_HEIGHT - this.height;
                 this.color = `hsl(${Math.random() * 360}, 70%, 60%)`;
+                this.glow = 0;
             }
         }
 
@@ -187,6 +206,8 @@
             if (!player.isJumping && gameStarted && !gameOver) {
                 player.yVelocity = JUMP_STRENGTH;
                 player.isJumping = true;
+                createParticles();
+                player.scaleY = 0.8;
             }
         }
 
@@ -201,31 +222,57 @@
             handleJump();
         });
 
-        document.getElementById('startBtn').addEventListener('click', startGame);
-        document.getElementById('restartBtn').addEventListener('click', resetGame);
-        document.getElementById('restartMobileBtn').addEventListener('click', resetGame);
+        document.getElementById('startBtn').addEventListener('click', () => {
+            enterFullscreen();
+            startGame();
+        });
 
         function startGame() {
             if (!gameStarted) {
                 gameStarted = true;
                 gameOver = false;
+                player.y = canvas.height - GROUND_HEIGHT - player.height;
                 document.getElementById('startBtn').disabled = true;
-                document.getElementById('restartBtn').disabled = false;
-                resetGame();
+                document.getElementById('mobileControls').style.display = 'flex';
+                gameLoop();
             }
         }
 
         function resetGame() {
             cancelAnimationFrame(animationFrameId);
+            const overlays = document.querySelectorAll('.game-over');
+            overlays.forEach(overlay => overlay.remove());
+            
             player.y = canvas.height - GROUND_HEIGHT - player.height;
             player.yVelocity = 0;
             player.isJumping = false;
+            player.scaleY = 1;
             obstacles = [];
+            particles = [];
             score = 0;
             gameOver = false;
             gameSpeed = INITIAL_SPEED;
             frameCount = 0;
-            gameLoop();
+            screenShake = 0;
+            gameStarted = false;
+            document.getElementById('startBtn').disabled = false;
+            document.getElementById('mobileControls').style.display = 'none';
+            if (document.fullscreenElement) document.exitFullscreen();
+        }
+
+        function createParticles() {
+            for (let i = 0; i < 10; i++) {
+                particles.push({
+                    x: player.x + player.width/2,
+                    y: player.y + player.height,
+                    size: Math.random() * 3 + 2,
+                    velocity: {
+                        x: (Math.random() - 0.5) * 5,
+                        y: Math.random() * -3 - 2
+                    },
+                    alpha: 1
+                });
+            }
         }
 
         function update() {
@@ -241,12 +288,15 @@
             // Player physics
             player.yVelocity += GRAVITY;
             player.y += player.yVelocity;
+            player.scaleY = Math.min(player.scaleY + 0.05, 1);
 
             // Ground collision
             if (player.y + player.height >= canvas.height - GROUND_HEIGHT) {
                 player.y = canvas.height - GROUND_HEIGHT - player.height;
                 player.yVelocity = 0;
                 player.isJumping = false;
+                createParticles();
+                player.scaleY = 1.2;
             }
 
             // Obstacle generation
@@ -255,7 +305,10 @@
             }
 
             // Update obstacles
-            obstacles.forEach(obs => obs.x -= gameSpeed);
+            obstacles.forEach(obs => {
+                obs.x -= gameSpeed;
+                obs.glow = Math.sin(Date.now()/100) * 5 + 5;
+            });
             obstacles = obstacles.filter(obs => obs.x + obs.width > 0);
 
             // Collision detection
@@ -266,32 +319,63 @@
                     player.y < obs.y + obs.height &&
                     player.y + player.height > obs.y
                 ) {
+                    screenShake = 10;
                     gameOver = true;
                 }
             });
 
+            // Update particles
+            particles.forEach(p => {
+                p.x += p.velocity.x;
+                p.y += p.velocity.y;
+                p.alpha -= 0.02;
+                p.velocity.y += 0.1;
+            });
+            particles = particles.filter(p => p.alpha > 0);
+
             // Gradually increase difficulty
             gameSpeed += 0.002;
+            if (screenShake > 0) screenShake--;
         }
 
         function draw() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
 
+            // Apply screen shake
+            const shakeX = screenShake > 0 ? Math.random() * 4 - 2 : 0;
+            const shakeY = screenShake > 0 ? Math.random() * 4 - 2 : 0;
+            ctx.setTransform(1, 0, 0, 1, shakeX, shakeY);
+
             // Draw ground
             ctx.fillStyle = '#4e342e';
             ctx.fillRect(0, canvas.height - GROUND_HEIGHT, canvas.width, GROUND_HEIGHT);
 
-            // Draw player
-            ctx.beginPath();
-            ctx.roundRect(player.x, player.y, player.width, player.height, 10);
+            // Draw player with squash/stretch
+            ctx.save();
+            ctx.translate(player.x + player.width/2, player.y + player.height);
+            ctx.scale(1, player.scaleY);
             ctx.fillStyle = player.color;
+            ctx.beginPath();
+            ctx.roundRect(-player.width/2, -player.height, player.width, player.height, 10);
             ctx.fill();
+            ctx.restore();
 
-            // Draw obstacles
+            // Draw obstacles with glow
             obstacles.forEach(obs => {
+                ctx.shadowColor = obs.color;
+                ctx.shadowBlur = obs.glow;
+                ctx.fillStyle = obs.color;
                 ctx.beginPath();
                 ctx.roundRect(obs.x, obs.y, obs.width, obs.height, 5);
-                ctx.fillStyle = obs.color;
+                ctx.fill();
+                ctx.shadowBlur = 0;
+            });
+
+            // Draw particles
+            particles.forEach(p => {
+                ctx.fillStyle = `rgba(255,167,38,${p.alpha})`;
+                ctx.beginPath();
+                ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
                 ctx.fill();
             });
 
